--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -18,3 +18,17 @@
 
     - debug:
         var: vpcout
+
+    - name: create Public subnet 1 in zone 1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PubSub1Cidr}}"
+        resource_tags:
+          Name: vprofile-pubsub1
+      register: pubsub1_out
+
+    - debug:
+        var: pubsub1_out
