--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -16,8 +16,8 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+  #  - debug:
+  #      var: vpcout
 
     - name: create Public subnet 1 in zone 1
       ec2_vpc_subnet:
@@ -26,9 +26,67 @@
         az: "{{zone1}}"
         state: "{{state}}"
         cidr: "{{PubSub1Cidr}}"
+        map_public: yes
         resource_tags:
           Name: vprofile-pubsub1
       register: pubsub1_out
 
-    - debug:
-        var: pubsub1_out
+  #  - debug:
+  #      var: pubsub1_out
+
+    - name: create Public subnet 2 in zone 2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PubSub2Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub2
+      register: pubsub2_out
+
+    - name: create Public subnet 3 in zone 3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PubSub3Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub3
+      register: pubsub3_out
+
+    - name: create Private subnet 1 in zone 1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub1Cidr}}"
+        resource_tags:
+          Name: vprofile-privsub1
+      register: privsub1_out
+
+    - name: create Private subnet 2 in zone 2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub2Cidr}}"
+        resource_tags:
+          Name: vprofile-privsub2
+      register: privsub2_out
+
+    - name: create Private subnet 3 in zone 3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub3Cidr}}"
+        resource_tags:
+          Name: vprofile-privsub3
+      register: privsub3_out
