--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -90,3 +90,27 @@
         resource_tags:
           Name: vprofile-privsub3
       register: privsub3_out
+
+    - name: create Internet Gateway for public subnet
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: "{{state}}"
+        resource_tags:
+          Name: vprofile-IGW
+        register: igw_out
+
+    - name: create public subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        tags:
+          Name: Vprofile_PubRT
+        subnets:
+          - "{{pubsub1_out.subnet.id}}"
+          - "{{pubsub2_out.subnet.id}}"
+          - "{{pubsub3_out.subnet.id}}"
+        routes:
+          dest: 0.0.0.0/0
+          gateway_id: "{{igw_out.gateway_id}}"
+      register: pubRT_out
