--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -111,6 +111,6 @@
           - "{{pubsub2_out.subnet.id}}"
           - "{{pubsub3_out.subnet.id}}"
         routes:
-          dest: 0.0.0.0/0
-          gateway_id: "{{igw_out.gateway_id}}"
+          - dest: 0.0.0.0/0
+            gateway_id: "{{igw_out.gateway_id}}"
       register: pubRT_out
