--- a/vpc_setup.yaml
+++ b/vpc_setup.yaml
@@ -129,7 +129,7 @@
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         tags:
-          Name: Vprofile_PubRT
+          Name: Vprofile_privRT
         subnets:
           - "{{privsub1_out.subnet.id}}"
           - "{{privsub2_out.subnet.id}}"
