--- a/bastion-instance.yaml
+++ b/bastion-instance.yaml
@@ -4,7 +4,7 @@
   gather_facts: False
   tasks:
     - name: Import bastion variables
-      include_vars: vars/bastion_setup
+      include_vars: vars/vpc_setup
 
     - name: Import VPC variables
       include_vars: vars/output_vars
