--- a/site.yaml
+++ b/site.yaml
@@ -1,3 +1,3 @@
 ---
-- import-playbook: vpc_setup.yaml
-- import-playbook: bastion-instance.yaml
+- import_playbook: vpc_setup.yaml
+- import_playbook: bastion-instance.yaml
