--- a/bastion-instance.yaml
+++ b/bastion-instance.yaml
@@ -7,7 +7,7 @@
       include_vars: vars/vpc_setup
 
     - name: Import VPC variables
-      include_vars: vars/output_vars
+      include_vars: vars/vpc-output_vars
 
     - name: create a new vprofile key pair
       ec2_key:
