--- a/provision-stack/build.yaml
+++ b/provision-stack/build.yaml
@@ -32,7 +32,7 @@
       copy:
         src: "{{item}}"
         dest: files/ROOT.war
-      withfileglob: Vprofile-repo/target/*.war
+      with_fileglob: Vprofile-repo/target/*.war
 
     - name: copy sql file to files directory
       copy:
