--- a/provision-stack/set_host_ip_map.yaml
+++ b/provision-stack/set_host_ip_map.yaml
@@ -1,7 +1,7 @@
 ---
 - name: set host to ip mapping in /etc/hosts file of all the instances
   hosts: all
-  task:
+  tasks:
     - name: import host name from var files
       include_vars: group_vars/hostsip
 
