--- a/vpro-ec2-stack.yaml
+++ b/vpro-ec2-stack.yaml
@@ -169,7 +169,7 @@
         module: ec2_elb_lb
         name: "vprofile-elb"
         region: "{{region}}"
-        state: "{{state}}"
+        state: present
         instance_ids:
           - "{{web01_out.tagged_instances[0].id}}"
         purge_instance_ids: true
