--- a/provision-stack/db.yaml
+++ b/provision-stack/db.yaml
@@ -42,7 +42,7 @@
 
     - name: enable remote login to mysql
       lineinfile:
-        path: /etc/mysql/mysql.conf.d/mysqld.conf
+        path: /etc/mysql/mysql.conf.d/mysqld.cnf
         regexp: '^bind-address'
         line: 'bind-address = 0.0.0.0'
         backup: yes
