--- a/provision-stack/rabbitmq.yaml
+++ b/provision-stack/rabbitmq.yaml
@@ -1,5 +1,5 @@
 ---
-- name: installing memcache, start and enable service
+- name: installing rabbitmq , start and enable service
   hosts: rmqsrvgrp
   gather_facts: no
   tasks:
@@ -25,18 +25,36 @@
       tags:
         - package
 
-    - name: Add an Apt signing key, uses whichever key is at the URL
-      apt_key:
-        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
-        state: present
-      tags:
-        - package
+#    - name: Add an Apt signing key, uses whichever key is at the URL
+#      apt_key:
+#        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+#        state: present
+#      tags:
+#        - package
+#
+#    - apt_repository:
+#        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+#        state: present
+#      tags:
+#        - package
 
-    - apt_repository:
-        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+    - name: Import the RabbitMQ signing key
+      apt_key:
+        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
         state: present
-      tags:
-        - package
+      tags: rabbitmq
+
+    - name: Add the RabbitMQ repository
+      apt_repository:
+        repo: "deb [signed-by=/usr/share/keyrings/erlang-archive-keyring.gpg] https://packages.erlang-solutions.com/ubuntu {{ ansible_distribution_release }} contrib"
+        state: present
+        filename: erlang-solutions.list
+      tags: rabbitmq
+
+    - name: Update package list
+      apt:
+        update_cache: yes
+      tags: rabbitmq
 
     - name: Install Rabbit MQ
       apt:
