--- a/provision-stack/rabbitmq.yaml
+++ b/provision-stack/rabbitmq.yaml
@@ -3,111 +3,149 @@
   hosts: rmqsrvgrp
   gather_facts: no
   tasks:
-    - name: install erlang repository package
+    - name: Install prerequisites
       apt:
-        deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
-      tags:
-        - package
-
-    - name: add an erlang solution public key
-      apt_key:
-        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+        name: [ 'curl', 'gnupg' ]
         state: present
-      tags:
-        - package
-
-    - name: Install erlang
-      apt:
-        name: erlang
-        state: present
-        update_cache: true
-        cache_valid_time: 86400
-      tags:
-        - package
-
-#    - name: Add an Apt signing key, uses whichever key is at the URL
-#      apt_key:
-#        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
-#        state: present
-#      tags:
-#        - package
-#
-#    - apt_repository:
-#        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
-#        state: present
-#      tags:
-#        - package
 
     - name: Import the RabbitMQ signing key
       apt_key:
         url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
         state: present
-      tags: rabbitmq
 
     - name: Add the RabbitMQ repository
       apt_repository:
         repo: "deb [signed-by=/usr/share/keyrings/erlang-archive-keyring.gpg] https://packages.erlang-solutions.com/ubuntu {{ ansible_distribution_release }} contrib"
         state: present
         filename: erlang-solutions.list
-      tags: rabbitmq
 
-#    - name: Update package list
-#      apt:
-#        update_cache: yes
-#      tags: rabbitmq
+    - name: Update package cache
+      apt:
+        update_cache: yes
 
-    - name: Install Rabbit MQ
+    - name: Install RabbitMQ server
       apt:
         name: rabbitmq-server
-        state: present
-        update_cache: yes
-      tags:
-        - package
+        state: latest
 
-    - name: Start & Enable RMQ
-      service:
-        name: rabbitmq-server
-        state: started
-        enabled: yes
-      tags:
-        - svc
+    - name: Enable RabbitMQ Management Plugin
+      command: rabbitmq-plugins enable rabbitmq_management
+      ignore_errors: yes  # Plugin may be already enabled
 
-    - name: Config setup
-      copy:
-        content: |
-          [{rabbit, [{loopback_users, []}]}].
-        dest: /etc/rabbitmq/rabbitmq.config
-      notify:
-        - Restart RMQ
-      tags:
-        - conf
-
-
-    - rabbitmq_user:
-        user: test
-        password: test
-        configure_priv: .*
-        read_priv: .*
-        write_priv: .*
-        tags: administrator
-        state: present
-      notify:
-        - Restart RMQ
-      tags:
-        - conf
-
-
-    - name: Enables the rabbitmq_management plugin
-      rabbitmq_plugin:
-        names: rabbitmq_management
-        state: enabled
-      notify:
-        - Restart RMQ
-      tags:
-        - package
-
-  handlers:
-    - name: Restart RMQ
-      service:
+    - name: Restart RabbitMQ service
+      systemd:
         name: rabbitmq-server
         state: restarted
+
+
+#
+#
+#  tasks:
+#    - name: install erlang repository package
+#      apt:
+#        deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
+#      tags:
+#        - package
+#
+#    - name: add an erlang solution public key
+#      apt_key:
+#        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+#        state: present
+#      tags:
+#        - package
+#
+#    - name: Install erlang
+#      apt:
+#        name: erlang
+#        state: present
+#        update_cache: true
+#        cache_valid_time: 86400
+#      tags:
+#        - package
+#
+##    - name: Add an Apt signing key, uses whichever key is at the URL
+##      apt_key:
+##        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+##        state: present
+##      tags:
+##        - package
+##
+##    - apt_repository:
+##        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+##        state: present
+##      tags:
+##        - package
+#
+#    - name: Import the RabbitMQ signing key
+#      apt_key:
+#        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+#        state: present
+#      tags: rabbitmq
+#
+#    - name: Add the RabbitMQ repository
+#      apt_repository:
+#        repo: "deb [signed-by=/usr/share/keyrings/erlang-archive-keyring.gpg] https://packages.erlang-solutions.com/ubuntu {{ ansible_distribution_release }} contrib"
+#        state: present
+#        filename: erlang-solutions.list
+#      tags: rabbitmq
+#
+##    - name: Update package list
+##      apt:
+##        update_cache: yes
+##      tags: rabbitmq
+#
+#    - name: Install Rabbit MQ
+#      apt:
+#        name: rabbitmq-server
+#        state: present
+#        update_cache: yes
+#      tags:
+#        - package
+#
+#    - name: Start & Enable RMQ
+#      service:
+#        name: rabbitmq-server
+#        state: started
+#        enabled: yes
+#      tags:
+#        - svc
+#
+#    - name: Config setup
+#      copy:
+#        content: |
+#          [{rabbit, [{loopback_users, []}]}].
+#        dest: /etc/rabbitmq/rabbitmq.config
+#      notify:
+#        - Restart RMQ
+#      tags:
+#        - conf
+#
+#
+#    - rabbitmq_user:
+#        user: test
+#        password: test
+#        configure_priv: .*
+#        read_priv: .*
+#        write_priv: .*
+#        tags: administrator
+#        state: present
+#      notify:
+#        - Restart RMQ
+#      tags:
+#        - conf
+#
+#
+#    - name: Enables the rabbitmq_management plugin
+#      rabbitmq_plugin:
+#        names: rabbitmq_management
+#        state: enabled
+#      notify:
+#        - Restart RMQ
+#      tags:
+#        - package
+#
+#  handlers:
+#    - name: Restart RMQ
+#      service:
+#        name: rabbitmq-server
+#        state: restarted
